infrastructure/environments/staging/authentication-service/service/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: authentication-ingress
  namespace: stag
  labels:
    app: authentication
    tier: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 20s
    nginx.ingress.kubernetes.io/client-max-body-size: 2m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 2m
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/limit-rps: "5" # 5 request/second/ip
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: auth-stag.review-site.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port:
              number: 80
  - host: auth-doc-stag.review-site.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port:
              number: 4000
